--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,8 @@ Django==5.0
 djangorestframework==3.14.0
 gunicorn==21.2.0
 packaging==23.2
+psycopg==3.1.15
+python-dotenv==1.0.0
 pytz==2023.3.post1
 sqlparse==0.4.4
+typing_extensions==4.9.0
