--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,12 +1,13 @@
-upstream django {
-    server todo_server:8000;
-}
+# upstream django {
+#     server todo_server:8000;
+# }
 
 server {
     listen 80;
 
     location / {
-        proxy_pass http://django;
+        # proxy_pass http://django;
+        proxy_pass http://localhost:8080;
     }
 
     location /static/ {
