--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,13 +1,12 @@
-# upstream django {
-#     server todo_server:8000;
-# }
+upstream todo_server {
+    server todo_server:8000;
+}
 
 server {
     listen 80;
 
     location / {
-        # proxy_pass http://django;
-        proxy_pass http://localhost:8000;
+        proxy_pass http://todo_server;
     }
 
     location /static/ {
