--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,6 +6,9 @@ server {
     listen 80;
 
     location / {
+        proxy_set_header Host $host;
+        include proxy_params;
+        
         proxy_pass http://todo_server;
     }
 
