--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,9 +6,11 @@ server {
     listen 80;
 
     location / {
-        proxy_set_header Host $host;
-        include proxy_params;
-        
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
         proxy_pass http://todo_server;
     }
 
