--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,4 +1,4 @@
-upstream todo_server {
+upstream django {
     server todo_server:8000;
 }
 
@@ -6,7 +6,7 @@ server {
     listen 80;
 
     location / {
-        proxy_pass http://todo_server;
+        proxy_pass http://django;
     }
 
     location /static/ {
