--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,13 @@
-SECRET_KEY='django-project-secret-key'
-DEBUG='debug mode (True/False)'
-ALLOWED_HOSTS='host'
+# django configurations
+SECRET_KEY='SECRET_KEY'
+DEBUG=True
+ALLOWED_HOSTS=127.0.0.1
+CSRF_TRUSTED_ORIGINS=CSRF_TRUSTED_ORIGINS
+
+# database configurations
+DB_ENGINE='DB_ENGINE'
+DB_NAME='DB_NAME'
+DB_USER='DB_USER'
+DB_PASSWORD='DB_PASSWORD'
+DB_HOST=DB_HOST
+DB_PORT=DB_PORT
